syntax = "proto3";

option java_multiple_files = true;
option java_package = "fun.justdevelops.proto";
option java_outer_classname = "OrderServiceProto";

message Order {
  int32 id = 1;
  int32 user_id = 2;
  int32 sum = 3;
  string title = 4;
  string timestamp = 5;
}

message UserOrdersRequest {
  int32 user_id = 1;
}

message UserOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc getUserOrders(UserOrdersRequest) returns (UserOrdersResponse) {};
}